leaflet map with draw functionality

--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -2,13 +2,13 @@
 <script src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.2/handlebars.min.js"></script>
 <!-- <script src="/js/users.js"></script> -->
-<link href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css" rel="stylesheet">
+<!-- <link href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css" rel="stylesheet"> -->
 <header class="row header">
 	<div class="col-md-12">
 		<h1>Map</h1>
 	</div>
 </header>
-<nav class="navbar row">
+<nav class="navbar row" style="margin-bottom: 0;">
 	<ul class="nav navbar-nav">
 		<li>
 			<a href="#" id="add-toggle" data-toggle="modal" data-target=""><b class="glyphicon glyphicon-plus"></b> Create mbtiles</a>
@@ -16,7 +16,7 @@
 	</ul>
 </nav>
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-12" style="padding: 0;">
 		{{#if error}}
 			<div class="alert alert-danger alert-dismissable">
 				  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -24,8 +24,87 @@
 			</div>
 		{{/if}}
 
-		<h3>map</h3>
+		<div id="map"></div>
 
+		<script>
+
+			function sizeMap(){
+				$('#map').css("height", function(){
+					return $(window).height() - 130;
+				});
+			}
+			$(window).resize(function(){
+				sizeMap();
+			});
+			sizeMap();
+
+
+			var mapUrl = 'http://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png';
+			var mapAttribution = 'Map data &copy; <a href="http://openstreetmap.org" target="_blank">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC-BY-SA</a> | Map style by <a href="http://hot.openstreetmap.org" target="_blank">H.O.T.</a> | &copy; <a href="http://redcross.org" title="Red Cross" target="_blank">Red Cross</a> 2013 | <a title="Disclaimer" onClick="showDisclaimer();">Disclaimer</a>';
+			var mapTiles = L.tileLayer(mapUrl, {attribution: mapAttribution});
+
+			var map = L.map('map', {
+			    zoom: 3,
+			    center: [0,0],
+			    scrollWheelZoom: false,
+			    layers: [mapTiles]
+			});
+
+			// add leaflet Geocoder search
+			// ===========================
+			var geocoder = L.Control.geocoder().addTo(map);
+			// customize the geocoder result selection function so only centers map and doesn't add a marker
+			geocoder.markGeocode = function(result) {
+			      this._map.fitBounds(result.bbox);
+			};
+
+			// leaflet draw functionality
+			// ==========================
+
+			// initialise the FeatureGroup to store editable layers
+			var drawnItems = new L.FeatureGroup();
+			map.addLayer(drawnItems);
+
+			var shapeOptions = {
+			  clickable: false,
+			  color: '#7a0177',
+			  fill: false
+			};
+			// set options
+			var options = {
+			    draw: {
+			        polyline: false,
+			        circle: false,
+			        marker: false,
+			        polygon: false,
+			        rectangle: {
+			            shapeOptions: shapeOptions
+			        }
+			    },
+			    edit: {
+			        featureGroup: drawnItems, //REQUIRED!!
+			        remove: false,
+			        edit: false
+
+			    }
+			};
+			// add draw control to map w options
+			var drawControl = new L.Control.Draw(options);
+			map.addControl(drawControl);
+			// set actions after draw
+			map.on('draw:created', function (e) {
+		    var type = e.layerType,
+		        layer = e.layer;
+	    	// clear previous polygon
+	    	drawnItems.clearLayers();
+	    	// add new polygon to map
+	    	drawnItems.addLayer(layer);
+				// zoom to new polygon
+				console.log(layer.getBounds());
+		  	map.fitBounds(layer.getBounds());
+			});
+
+		</script>
 
 
 		<!-- <div id="add-user-modal" class="modal fade" role="dialog">
