--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,17 @@
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<script src="/bower_components/leaflet/dist/leaflet.js"></script>
+		<script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
+		<script src="/bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
+		<script src="/bower_components/leaflet-draw/dist/leaflet.draw-src.js"></script>
+		<script src="/js/Control.Geocoder.js"></script>
 		<script src="/js/application.js"></script>
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css" />
+		<link rel="stylesheet" href="/bower_components/leaflet-draw/dist/leaflet.draw.css" />
+		<link rel="stylesheet" href="/css/Control.Geocoder.css" />
 		<link rel="stylesheet" href="/css/theme.css">
 		<link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/media/favicon.ico" type="image/x-icon">
