--- a/client/css/theme.css
+++ b/client/css/theme.css
@@ -4,7 +4,7 @@
 
 body, html { width: 100%; height: 100%; overflow-x: hidden; }
 
-body { color: #555; }
+body { color: #6d6e70; }
 
 input, select, textarea, .form-control { border-radius: 0; }
 
@@ -66,8 +66,8 @@ body > .container-fluid { padding: 0; }
 #site-header .navbar-form button { float: right; }
 #site-header .navbar-form p { text-align: left; margin: .5em 0 0; }
 
-.row-logo { text-align: center; padding: 2em 0 0; }
-.row-logo img { height: 2em; margin: 0 1em .5em; }
+.row-logo { padding-top: 2em; position: absolute; bottom: 0;  margin-bottom: 2em; margin-left: 2%; }
+.row-logo img { height: 2em; }
 
 #site-footer, #site-content { margin-left: 25%; width: 75%; padding-left: 15px; padding-right: 15px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
@@ -100,3 +100,39 @@ body > .container-fluid { padding: 0; }
   table thead td:last-child, table thead th:last-child, table tbody td:last-child, table tbody th:last-child { width: 20% !important; }
   .btn { border: none; }
   .btn-group .btn + .btn, .btn-group .btn + .btn-group, .btn-group .btn-group + .btn, .btn-group .btn-group + .btn-group { margin-left: 0; } }
+
+
+#map-area-instructions {
+  position:absolute;
+  top: 10px;
+  width: 50%;
+  left: 25%;
+  text-align:center;
+  z-index:2;
+  background-color: rgba(255,200,200,0.8);
+  padding: 1em;
+  border-radius: 0.6em;
+}
+
+#instructions {
+  margin: 20px;
+}
+
+#request-mbtiles {
+  position:absolute;
+  bottom: 2em;
+  width: 30%;
+  left: 35%;
+  text-align:center;
+  z-index:2;
+  background-color: rgba(255,255,255,0.8);
+  padding: 1em;
+  border-radius: 0.6em;
+  display: none;
+}
+
+.input-warning {
+  color:#A64753;
+  font-weight:300;
+  font-style:italic;
+}
